--- a/install
+++ b/install
@@ -9,7 +9,7 @@ CONFIG_DIR="$HOME/.config"
 # Configs only stored in ~/ or $HOME
 HOME_DIRS=("zsh" "tmux")
 # Configs only stored in ~/.config/
-CONFIG_DIRS=("nvim" "kitty")
+CONFIG_DIRS=("nvim" "kitty" "hypr")
 
 stow_it() {
     for h in ${HOME_DIRS[@]}; do
